<?xml version="1.0"?>
<package>
  <name>lazy_sdf</name>
  <version>0.0.0</version>
  <description>The lazy_sdf package. Use Gaussian process regression to learn a signed distance function across the map.</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>uav_mapper</build_depend>
  <build_depend>utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>uav_mapper</run_depend>
  <run_depend>utils</run_depend>
</package>

