<?xml version="1.0"?>
<package>
  <name>mapper_test</name>
  <version>0.0.0</version>
  <description>Node to test mapper functionality. Read depth maps from Guidance node, convert to point clouds, dump to rosbag</description>

  <author email="james.smith@berkeley.edu">James Smith</author>
  <maintainer email="james.smith@berkeley.edu">James Smith</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
